tests/NormalTests/paczka1/fuzzy1/19450550.err
Error in line 2: O28gKLmCu A307 17,5
Error in line 3: O28gKLmCu A346 34,4
